--- a/app/globals.css
+++ b/app/globals.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #eeeeee;
+  /* --foreground: #171717; */
 }
 
 @media (prefers-color-scheme: dark) {
@@ -15,7 +15,7 @@
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  background-color: white;
+  color: black;
   font-family: Arial, Helvetica, sans-serif;
 }
